# GroupProject

./: CMakeLists.txt
Lab2/: CMakeLists.txt
Lab2/include/: dfs_visitor.hpp  graph_generators.hpp  serial.hpp
Lab2/src/: graph.cpp  graph_backend.cpp  metrics.cpp  parsers.cpp
Lab3/: benchmark_results.csv  lab3  lab3.cpp
include/: dfs_visitor.h  dfs_visitor.hpp  graph.hpp  graph_backend.hpp  metrics.hpp  parsers.hpp  serial.hpp
src/: console.cpp  graph.cpp  graph_backend.cpp  graph_generators.cpp  metrics.cpp
tests/: test_graph.cpp
